fixing comments section on mobile

--- a/yb_video/static/css/yb_video/player9.css
+++ b/yb_video/static/css/yb_video/player9.css
@@ -309,19 +309,18 @@
         height: calc(100vh - 550px);
     }
 
-
-    
     .mobile-video-comment-divider {
         display: block;
     }
 
     .video-panel-content-container {
         width: 100%;
-        height: 100%;
+        height: 90%;
         margin: auto;
         border-radius: 15px;
         display: flex;
         align-items: end;
+        flex-direction: column;
     }
 }
 
